IWS_1st/IWS/API/Litecad.h

// Command Window
HANDLE LCAPI lcCreateCmdwin (HWND hWndParent, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcCmdwinResize (HANDLE hCmdLine, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcCmdwinUpdate (HANDLE hCmdLine);  // undoc
// Properties Window
HANDLE LCAPI lcCreateProps (HWND hWndParent);
BOOL   LCAPI lcDeleteProps (HANDLE hPropWnd);
BOOL   LCAPI lcPropsResize (HANDLE hPropWnd, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcPropsUpdate (HANDLE hPropWnd, BOOL bSelChanged);
// Status Bar
HANDLE LCAPI lcCreateStatbar (HWND hWndParent);   // also LC_PROP_SBAR_H and others
BOOL   LCAPI lcDeleteStatbar (HANDLE hStatbar);
BOOL   LCAPI lcStatbarResize (HANDLE hStatbar, int Left, int Top, int Width, int Height);
BOOL   LCAPI lcStatbarCell   (HANDLE hStatbar, int Id, int Pos);
BOOL   LCAPI lcStatbarText   (HANDLE hStatbar, int Id, LPCWSTR szText);
BOOL   LCAPI lcStatbarRedraw (HANDLE hStatbar);
// utility functions
BOOL    LCAPI lcDgGetValue    (HANDLE hWnd, int Lef, int Top, LPCWSTR szTitle, LPCWSTR szPrompt);
BOOL    LCAPI lcHelp          (LPCWSTR szTopic);
void    LCAPI lcGetPolarPoint (double x0, double y0, double Angle, double Dist, double* pOutX, double* pOutY);
void    LCAPI lcGetPolarPrm   (double x1, double y1, double x2, double y2, double* pAngle, double* pDist);
BOOL    LCAPI lcGetClientSize (HWND hWnd, int* pWidth, int* pHeight);
int     LCAPI lcGetErrorCode  ();
LPCWSTR LCAPI lcGetErrorStr   ();
BOOL    LCAPI lcGetStr        (int Mode);
// Custom command interface
HANDLE LCAPI lcCreateCommand  (HANDLE hLcWnd, int Id, LPCWSTR szTitle);
BOOL   LCAPI lcCmdExit        (HANDLE hCmd);
BOOL   LCAPI lcCmdCursorText  (HANDLE hCmd, LPCWSTR szText);
int    LCAPI lcCmdMessage     (HANDLE hCmd, LPCWSTR szText, int uType);
BOOL   LCAPI lcCmdResetLastPt (HANDLE hCmd);
BOOL LCAPI lcTIS_InitLibrary   (LPCWSTR szLicenseKey, BOOL bErrMsg);
BOOL LCAPI lcTIS_CloseLibrary  ();
BOOL LCAPI lcCameraConnect     (LPCWSTR szName);  // LC_PROP_G_CAMERA_COUNT
BOOL LCAPI lcCameraDisconnect  ();
BOOL LCAPI lcCameraShot        ();
//-----------------------------------------------------------------------------
// Drawing
//-----------------------------------------------------------------------------
HANDLE LCAPI lcCreateDrawing      ();
BOOL   LCAPI lcDeleteDrawing      (HANDLE hDrw);
BOOL   LCAPI lcDrwNew             (HANDLE hDrw, LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoad            (HANDLE hDrw, LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoadMem         (HANDLE hDrw, HANDLE hMem, HANDLE hLcWnd);
BOOL   LCAPI lcDrwInsert          (HANDLE hDrw, LPCWSTR szFileName, int Overwrite, HANDLE hLcWnd);
BOOL   LCAPI lcDrwCopy            (HANDLE hDrw, HANDLE hDrwSrc);
BOOL   LCAPI lcDrwSave            (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HANDLE hLcWnd);
 
int    LCAPI lcDrwSaveMem         (HANDLE hDrw, HANDLE hMem, int MemSize);
HANDLE LCAPI lcDrwAddLayer        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szColor, HANDLE hLtype, int Lwidth);
HANDLE LCAPI lcDrwAddLinetype     (HANDLE hDrw, LPCWSTR szName, LPCWSTR szDefinition);
HANDLE LCAPI lcDrwAddLinetypeF    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, LPCWSTR szLtypeName);
HANDLE LCAPI lcDrwAddTextStyle    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFontName, BOOL bWinFont);
HANDLE LCAPI lcDrwAddDimStyle     (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddMlineStyle   (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddPntStyle     (HANDLE hDrw, LPCWSTR szName, HANDLE hBlock, double BlockScale, HANDLE hTStyle, double TextHeight, double TextWidth);
HANDLE LCAPI lcDrwAddFilling      (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddImage        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName);
HANDLE LCAPI lcDrwAddImage2       (HANDLE hDrw, LPCWSTR szName, int Width, int Height, int nBits);
HANDLE LCAPI lcDrwAddImage3       (HANDLE hDrw, LPCWSTR szName, HANDLE hMem);
HANDLE LCAPI lcDrwAddImageCam     (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddBlock        (HANDLE hDrw, LPCWSTR szName, double X, double Y);
HANDLE LCAPI lcDrwAddBlockFromFile (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
 
HANDLE LCAPI lcDrwAddBlockFromDrw (HANDLE hDrw, LPCWSTR szName, HANDLE hDrw2, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddBlockFile    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddBlockPaper   (HANDLE hDrw, LPCWSTR szName, int PaperSize, int Orient, double Width, double Height);
HANDLE LCAPI lcDrwAddBlockCopy    (HANDLE hDrw, LPCWSTR szName, HANDLE hSrcBlock);
 

BOOL   LCAPI lcDrwDeleteObject    (HANDLE hDrw, HANDLE hObject);
int    LCAPI lcDrwDeleteUnused    (HANDLE hDrw, int ObjType);    // undoc
int    LCAPI lcDrwCountObjects    (HANDLE hDrw, int ObjType);
BOOL   LCAPI lcDrwSortObjects     (HANDLE hDrw, int ObjType);
BOOL   LCAPI lcDrwUpdateWinFonts  (HANDLE hDrw, HANDLE hTStyle);
HANDLE LCAPI lcDrwGetFirstObject  (HANDLE hDrw, int ObjType);
HANDLE LCAPI lcDrwGetNextObject   (HANDLE hDrw, HANDLE hObject);
HANDLE LCAPI lcDrwGetObjectByID   (HANDLE hDrw, int ObjType, int Id);
HANDLE LCAPI lcDrwGetObjectByIDH  (HANDLE hDrw, int ObjType, LPCWSTR szId);
HANDLE LCAPI lcDrwGetObjectByName (HANDLE hDrw, int ObjType, LPCWSTR szName);
HANDLE LCAPI lcDrwGetEntByID      (HANDLE hDrw, int Id);
HANDLE LCAPI lcDrwGetEntByIDH     (HANDLE hDrw, LPCWSTR szId);
HANDLE LCAPI lcDrwGetEntByKey     (HANDLE hDrw, int Key);
BOOL   LCAPI lcDrwClearXData      (HANDLE hDrw, int ObjType, int Mode);
BOOL   LCAPI lcDrwPurge           (HANDLE hDrw);
BOOL   LCAPI lcDrwExplode         (HANDLE hDrw, int Mode);
BOOL   LCAPI lcDrwSetLimits       (HANDLE hDrw, double Xmin, double Ymin, double Xmax, double Ymax);
BOOL   LCAPI lcDrwUndoRecord      (HANDLE hDrw, int Mode);
 
BOOL   LCAPI lcDrwUndo            (HANDLE hDrw, BOOL bRedo);
// Clipping rectangles
BOOL   LCAPI lcCRectsClear     (HANDLE hDrw);
 
BOOL   LCAPI lcCRectsAdd       (HANDLE hDrw, int ID, double Lef, double Bot, double Width, double Height);
int    LCAPI lcCRectsDivide    (HANDLE hDrw, int NumX, int NumY, BOOL bClearExist);
HANDLE LCAPI lcCRectsGetFirst  (HANDLE hDrw);
HANDLE LCAPI lcCRectsGetNext   (HANDLE hDrw, HANDLE hCRect);
HANDLE LCAPI lcCRectsGetWithID (HANDLE hDrw, int Id);
BOOL   LCAPI lcCRectsActive    (HANDLE hDrw, HANDLE hCRect);
HANDLE LCAPI lcCRectsGetActive (HANDLE hDrw);
BOOL   LCAPI lcCRectsDelete    (HANDLE hDrw, HANDLE hCRect);
BOOL   LCAPI lcCRectsSave      (HANDLE hDrw, HANDLE hCRect, LPCWSTR szFileName);
BOOL   LCAPI lcCRectsBitmap    (HANDLE hDrw, HANDLE hCRect, LPCWSTR szFileName, double PixelSize);
// Block
BOOL   LCAPI lcBlockSetViewRect  (HANDLE hBlock, double Xcen, double Ycen, double Width, double Height);
BOOL   LCAPI lcBlockSetViewRect2 (HANDLE hBlock, double Lef, double Bot, double Rig, double Top);
BOOL   LCAPI lcBlockSetPaperSize (HANDLE hBlock, int PaperSize, int Orient, double Width, double Height);
BOOL   LCAPI lcBlockRasterize    (HANDLE hBlock, LPCWSTR szFileName, double Xmin, double Ymin, double Xmax, double Ymax, int ImgW, int ImgH);
int    LCAPI lcBlockRasterizeMem (HANDLE hBlock, HANDLE hMem, double Xmin, double Ymin, double Xmax, double Ymax, int ImgW, int ImgH);
BOOL   LCAPI lcBlockUpdate       (HANDLE hBlock, BOOL bUpdEnts, HANDLE hNewEnt);
BOOL   LCAPI lcBlockMove         (HANDLE hBlock, double dX, double dY, BOOL bUpdate);
BOOL   LCAPI lcBlockScale        (HANDLE hBlock, double X, double Y, double Scale, BOOL bUpdate);
BOOL   LCAPI lcBlockRotate       (HANDLE hBlock, double X, double Y, double Angle, BOOL bUpdate);
BOOL   LCAPI lcBlockMirror       (HANDLE hBlock, double X1, double Y1, double X2, double Y2, BOOL bUpdate);
// Add graphic objects into a block
BOOL   LCAPI lcBlockClear       (HANDLE hBlock, HANDLE hLayer);
BOOL   LCAPI lcBlockPurge       (HANDLE hBlock);
BOOL   LCAPI lcBlockSortEnts    (HANDLE hBlock, BOOL bByLayers, HWND hWnd);
BOOL   LCAPI lcBlockSortEnts2   (HANDLE hBlock, HANDLE idEnts, int nEnts);   // for DWG plugin