IWS_1st_No2DInsp/IWS/API/Litecad.pas

Function lcCreateCmdwin (hWndParent: IntPtr; Left: Integer; Top: Integer; Width: Integer; Height: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCmdwinResize (hCmdLine: IntPtr; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCmdwinUpdate (hCmdLine: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCreateProps (hWndParent: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDeleteProps (hPropWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPropsResize (hPropWnd: IntPtr; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPropsUpdate (hPropWnd: IntPtr; bSelChanged: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCreateStatbar (hWndParent: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDeleteStatbar (hStatbar: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcStatbarResize (hStatbar: IntPtr; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcStatbarCell (hStatbar: IntPtr; Id: Integer; Pos: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcStatbarText (hStatbar: IntPtr; Id: Integer; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcStatbarRedraw (hStatbar: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDgGetValue (hWnd: IntPtr; Lef: Integer; Top: Integer; szTitle: PWideChar; szPrompt: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcHelp (szTopic: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Procedure lcGetPolarPoint (x0: Double; y0: Double; Angle: Double; Dist: Double; pOutX: Pdouble; pOutY: Pdouble); stdcall; external 'Litecad64.dll';
Procedure lcGetPolarPrm (x1: Double; y1: Double; x2: Double; y2: Double; pAngle: Pdouble; pDist: Pdouble); stdcall; external 'Litecad64.dll';
Function lcGetClientSize (hWnd: IntPtr; pWidth: Pinteger; pHeight: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcGetErrorCode : Integer; stdcall; external 'Litecad64.dll';
Function lcGetErrorStr : PWideChar; stdcall; external 'Litecad64.dll';
Function lcGetStr (Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCreateCommand (hLcWnd: IntPtr; Id: Integer; szTitle: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCmdExit (hCmd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCmdCursorText (hCmd: IntPtr; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcCmdMessage (hCmd: IntPtr; szText: PWideChar; uType: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCmdResetLastPt (hCmd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcTIS_InitLibrary (szLicenseKey: PWideChar; bErrMsg: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcTIS_CloseLibrary : Integer; stdcall; external 'Litecad64.dll';
Function lcCameraConnect (szName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcCameraDisconnect : Integer; stdcall; external 'Litecad64.dll';
Function lcCameraShot : Integer; stdcall; external 'Litecad64.dll';
Function lcCreateDrawing : IntPtr; stdcall; external 'Litecad64.dll';
Function lcDeleteDrawing (hDrw: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwNew (hDrw: IntPtr; szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwLoad (hDrw: IntPtr; szFileName: PWideChar; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwLoadMem (hDrw: IntPtr; hMem: IntPtr; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwInsert (hDrw: IntPtr; szFileName: PWideChar; Overwrite: Integer; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwCopy (hDrw: IntPtr; hDrwSrc: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwSave (hDrw: IntPtr; szFileName: PWideChar; bBak: Integer; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwSaveMem (hDrw: IntPtr; hMem: IntPtr; MemSize: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwAddLayer (hDrw: IntPtr; szName: PWideChar; szColor: PWideChar; hLtype: IntPtr; Lwidth: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddLinetype (hDrw: IntPtr; szName: PWideChar; szDefinition: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddLinetypeF (hDrw: IntPtr; szName: PWideChar; szFileName: PWideChar; szLtypeName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddTextStyle (hDrw: IntPtr; szName: PWideChar; szFontName: PWideChar; bWinFont: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddDimStyle (hDrw: IntPtr; szName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddMlineStyle (hDrw: IntPtr; szName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddPntStyle (hDrw: IntPtr; szName: PWideChar; hBlock: IntPtr; BlockScale: Double; hTStyle: IntPtr; TextHeight: Double; TextWidth: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddFilling (hDrw: IntPtr; szName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddImage (hDrw: IntPtr; szName: PWideChar; szFileName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddImage2 (hDrw: IntPtr; szName: PWideChar; Width: Integer; Height: Integer; nBits: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddImage3 (hDrw: IntPtr; szName: PWideChar; hMem: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddImageCam (hDrw: IntPtr; szName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlock (hDrw: IntPtr; szName: PWideChar; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlockFromFile (hDrw: IntPtr; szName: PWideChar; szFileName: PWideChar; Overwrite: Integer; hwParent: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlockFromDrw (hDrw: IntPtr; szName: PWideChar; hDrw2: IntPtr; Overwrite: Integer; hwParent: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlockFile (hDrw: IntPtr; szName: PWideChar; szFileName: PWideChar; Overwrite: Integer; hwParent: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlockPaper (hDrw: IntPtr; szName: PWideChar; PaperSize: Integer; Orient: Integer; Width: Double; Height: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwAddBlockCopy (hDrw: IntPtr; szName: PWideChar; hSrcBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwDeleteObject (hDrw: IntPtr; hObject: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwDeleteUnused (hDrw: IntPtr; ObjType: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwCountObjects (hDrw: IntPtr; ObjType: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwSortObjects (hDrw: IntPtr; ObjType: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwUpdateWinFonts (hDrw: IntPtr; hTStyle: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwGetFirstObject (hDrw: IntPtr; ObjType: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetNextObject (hDrw: IntPtr; hObject: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetObjectByID (hDrw: IntPtr; ObjType: Integer; Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetObjectByIDH (hDrw: IntPtr; ObjType: Integer; szId: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetObjectByName (hDrw: IntPtr; ObjType: Integer; szName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetEntByID (hDrw: IntPtr; Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetEntByIDH (hDrw: IntPtr; szId: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwGetEntByKey (hDrw: IntPtr; Key: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcDrwClearXData (hDrw: IntPtr; ObjType: Integer; Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwPurge (hDrw: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwExplode (hDrw: IntPtr; Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwSetLimits (hDrw: IntPtr; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwUndoRecord (hDrw: IntPtr; Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcDrwUndo (hDrw: IntPtr; bRedo: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsClear (hDrw: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsAdd (hDrw: IntPtr; ID: Integer; Lef: Double; Bot: Double; Width: Double; Height: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsDivide (hDrw: IntPtr; NumX: Integer; NumY: Integer; bClearExist: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsGetFirst (hDrw: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCRectsGetNext (hDrw: IntPtr; hCRect: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCRectsGetWithID (hDrw: IntPtr; Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCRectsActive (hDrw: IntPtr; hCRect: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsGetActive (hDrw: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcCRectsDelete (hDrw: IntPtr; hCRect: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsSave (hDrw: IntPtr; hCRect: IntPtr; szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcCRectsBitmap (hDrw: IntPtr; hCRect: IntPtr; szFileName: PWideChar; PixelSize: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSetViewRect (hBlock: IntPtr; Xcen: Double; Ycen: Double; Width: Double; Height: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSetViewRect2 (hBlock: IntPtr; Lef: Double; Bot: Double; Rig: Double; Top: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSetPaperSize (hBlock: IntPtr; PaperSize: Integer; Orient: Integer; Width: Double; Height: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockRasterize (hBlock: IntPtr; szFileName: PWideChar; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double; ImgW: Integer; ImgH: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockRasterizeMem (hBlock: IntPtr; hMem: IntPtr; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double; ImgW: Integer; ImgH: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockUpdate (hBlock: IntPtr; bUpdEnts: Integer; hNewEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockMove (hBlock: IntPtr; dX: Double; dY: Double; bUpdate: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockScale (hBlock: IntPtr; X: Double; Y: Double; Scale: Double; bUpdate: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockRotate (hBlock: IntPtr; X: Double; Y: Double; Angle: Double; bUpdate: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockMirror (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; bUpdate: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockClear (hBlock: IntPtr; hLayer: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockPurge (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSortEnts (hBlock: IntPtr; bByLayers: Integer; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSortEnts2 (hBlock: IntPtr; idEnts: IntPtr; nEnts: Integer): Integer; stdcall; external 'Litecad64.dll';
